# halova-make-2026

./: .env.example  .gitignore  Makefile  README.md
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-env-fallback.txt  task-1-nuxt-foundation.txt  task-12-toast-test.txt  task-19-responsive-audit.txt  task-20-a11y-motion.txt  task-21-failure-hardening.txt  task-22-quality-gates.txt  task-4-api-offline-test.md  task-4-api-success.txt  task-5-implementation-summary.txt  task-5-verification.md
.sisyphus/notepads/community-request-nuxt-frontend/: decisions.md  issues.md  (+2 more)
.sisyphus/plans/: community-request-nuxt-frontend.md
backend/: .env.example  README.md  frontend.py  main.py  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py  qdrant_client.py
backend/app/api/: requests.py
backend/app/auth/: jwt.py  routes.py
backend/app/core/: config.py
backend/app/models/: __init__.py  request.py  user.py
backend/app/routers/: example.py
backend/app/services/: ai_pipeline.py  constants.py
frontend/: README.md  app.vue  nuxt.config.ts  package-lock.json  package.json  qa.mjs  tailwind.config.js  test-toast.mjs
frontend/api/: auth.ts  axios.ts  categories.ts  openapi.ts  requests.ts  stats.ts  token.ts  types.ts
frontend/composables/: useApi.ts  useRequestForm.ts  useRequests.ts  useToast.ts
frontend/pages/: form.vue  index.vue  test-api.vue  test-form.vue  thank-you.vue
frontend/scripts/: start-prod.mjs
frontend/stores/: formStore.ts  requestStore.ts
frontend/tests/: api-offline.spec.ts
frontend/utils/: errorMessages.ts
(+21 files in other folders)
