[project]
name = "request-ai-mvp"
version = "0.1.0"
description = "FastAPI MVP for request analysis with Vertex AI Gemini"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "google-cloud-aiplatform>=1.76.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "sqlmodel>=0.0.22",
    "uvicorn[standard]>=0.32.0",
]

[tool.uv]
dev-dependencies = []
